# coding-tools

./: .gitignore  NOTICE  README.md  pyproject.toml
.githooks/: pre-commit.sample
.github/workflows/: test.yml
docs/designs/: 001-worskpace-stamper-architecture-v0.1.md
src/: __init__.py
src/coding_tools/: __init__.py  backup_untracked.py  path_stamper.py  workspace_stamper.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_backup_untracked.py  test_path_stamper.py  test_workspace_stamper.py
