[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coding_tools"]

[project]
name = "coding-tools"
version = "0.1.0"
description = "Automated workflows for codebase path stamping and untracked file backups."
readme = "README.md"
requires-python = ">=3.12.9"
authors = [
    { name = "Sebastien Lenard", email = "sebstien.lenard@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.10.0",
]

[project.scripts]
path-stamper = "coding_tools.path_stamper:main"
backup-untracked = "coding_tools.backup_untracked:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = []
fixable = ["ALL"]